# basic

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
backend/: pyproject.toml
src/backend/: CHECKS  Procfile  app.json  app.py  pyproject.toml  run-web.sh  uwsgi.ini
src/backend/backend/: health_api.py
src/backend/tests/: uwsgi.ini
src/frontend/: README.md  package.json  vue.config.js
