[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Nicola Good <good.nicola94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
